base/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: login-app
  template:
    metadata:
      labels:
        app: login-app
    spec:
      containers:
        - name: login-app
          image: image-registry.openshift-image-registry.svc:5000/loginapp-dev/login-app-docker-strat
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
